Add more cases for play